--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     <main>
         <section class="presentation">
-            <h1>
-                Reservez le menu qui vous convient
+            <h1 class="presentation__title">
+                Réservez le menu qui vous convient
             </h1>
             <p>
                 Découvrez des restaurants d'exception, sélectionnés par nos soins.
