--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/67673b6d3e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/reset.scss">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href=".css/prefixed/style.css">
+    <link rel="stylesheet" href="./css/prefixed/style.css">
 </head>
 <body>
     <div class="loadingSpinner">
